--- a/Jane2zWaDa3wa/res/layout/activity_main.xml
+++ b/Jane2zWaDa3wa/res/layout/activity_main.xml
@@ -78,6 +78,7 @@
                 android:layout_height="wrap_content" >
 
                 <ImageView
+                    android:id="@+id/img_header"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/drawer_header"
