--- a/Jane2zWaDa3wa/res/layout/fragment_add_janaza.xml
+++ b/Jane2zWaDa3wa/res/layout/fragment_add_janaza.xml
@@ -65,7 +65,7 @@
                         android:gravity="right|center_vertical"
                         android:maxLines="1"
                         android:padding="5dp"
-                        android:text="العنوان :"
+                        android:text="@string/name"
                         android:textColor="@color/jd_green"
                         android:textSize="20sp" />
 
