--- a/Jane2zWaDa3wa/res/layout/janeza_child_item.xml
+++ b/Jane2zWaDa3wa/res/layout/janeza_child_item.xml
@@ -5,30 +5,73 @@
     android:minHeight="40dp"
     android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/txv_name_value"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/txv_name"
         android:layout_centerVertical="true"
-        android:maxLines="1"
-        android:padding="5dp"
-        android:text="@string/name"
-        android:textColor="@color/color_green"
-        android:textSize="16sp" />
+        android:layout_toLeftOf="@+id/txv_janeza_index" >
 
-    <TextView
-        android:id="@+id/txv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/txv_janeza_index"
-        android:layout_centerVertical="true"
-        android:gravity="right"
-        android:maxLines="1"
-        android:padding="5dp"
-        android:text="@string/name"
-        android:textColor="@color/color_beige"
-        android:textSize="16sp" />
+        <LinearLayout
+            android:id="@+id/layout_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/txv_name_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:singleLine="true"
+                android:text="@string/name"
+                android:textColor="@color/color_green"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:padding="5dp"
+                android:singleLine="true"
+                android:text="@string/name"
+                android:textColor="@color/color_beige"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/layout_name"
+            android:layout_marginRight="5dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/txv_date_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:singleLine="true"
+                android:text="@string/date"
+                android:textColor="@color/color_green"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:padding="5dp"
+                android:singleLine="true"
+                android:text="@string/date"
+                android:textColor="@color/color_beige"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/txv_janeza_index"
