--- a/Jane2zWaDa3wa/res/layout/janeza_child_item.xml
+++ b/Jane2zWaDa3wa/res/layout/janeza_child_item.xml
@@ -85,5 +85,10 @@
         android:text="1"
         android:textColor="#fff"
         android:textSize="16sp" />
+    
+    <View android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_alignParentBottom="true"
+        android:background="@color/jd_green"/>
 
 </RelativeLayout>
