--- a/Jane2zWaDa3wa/res/layout/prayer_group_item.xml
+++ b/Jane2zWaDa3wa/res/layout/prayer_group_item.xml
@@ -1,12 +1,31 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/txv_name_value"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:layout_alignParentRight="true"
     android:background="@drawable/list_white_selector"
-    android:gravity="center_vertical"
-    android:maxLines="1"
-    android:text="@string/name"
-    android:textColor="@color/color_green"
-    android:textSize="18sp" />
+    android:orientation="horizontal" >
+
+    <TextView
+        android:id="@+id/txv_total"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginLeft="25dp"
+        android:background="@drawable/circle_shape_red"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="#fff"
+        android:textSize="16sp"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/txv_name_value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="@string/name"
+        android:textColor="@color/color_green"
+        android:textSize="18sp" />
+
+</LinearLayout>
